add newsletter subscription iframe

--- a/content/email.org
+++ b/content/email.org
@@ -1,1 +1,13 @@
-Please email us at: ~training at westdri dot ca~
+*Contact*
+
+Please email us at: ~training at westdri dot ca~.
+{{<br size="4">}}
+
+*Newsletter*
+
+You can subscribe to our newsletter if you want to get informed about upcoming training events:
+
+#+BEGIN_export html
+<iframe id="iframeform" src="https://secure.campaigner.com/CSB/Public/Form.aspx?fid=1889522&ac=gk59"
+	frameborder="0" data-acc-id="gk59" height="200" width="510" scrolling="no"></iframe>
+#+END_export
